--- a/_includes/donate_ru.html
+++ b/_includes/donate_ru.html
@@ -1,24 +1,24 @@
 <h1 id="h0">Support ConEmu development</h1>
 
-<p>ConEmu-Maximus5 was brought to life and is supported by almost single developer efforts.
-The most valuable resource is time actually, hundreds of hours. But of course there are other expenses,
-minor or considerable: hardware used for developing and testing, digital certificate for signing
-ConEmu binaries (current one was obtained from <a href="http://certum.pl">Certum.pl</a>),
-hosting... </p>
+<p>ConEmu-Maximus5 поддерживается усилиями практически одного разработчика.
+На разработку и поддержку потрачены сотни часов, самый ценный ресурс.
+Но, конечно, есть и другие расходы, как незначительные, так и заметные:
+аппаратное и программное обеспечение, используемое для разработки и тестирования,
+цифровой сертификат для подписания исполняемых файлов ConEmu (текущий был выпущен
+<a href="http://certum.pl">Certum.pl</a>), хостинг... </p>
 
-<p>You can show your appreciation and support
-<a href="/en/RoadMap.html">further development</a>
-and maintaining by contributing with
-<a href="/en/Issues.html">bugreporting</a>,
-<a href="/en/Localization.html">localization</a>,
-<a href="#funding">funding (look below)</a>,
-<a href="https://github.com/ConEmu/ConEmu.github.io">helping with documentation</a>,
-<a href="https://github.com/Maximus5/ConEmu">coding</a>,
-<a href="/en/Awards.html#Voting">voting</a>
-or anything else, spreading the word for example. </p>
+<p>Вы можете поблагодарить и поддержать
+<a href="/en/RoadMap.html">дальнейшую разработку</a>
+и поддержку:
+<a href="/en/Issues.html">сообщая о багах</a>,
+<a href="/en/Localization.html">переводом</a>,
+<a href="#funding">материально (ссылка ниже)</a>,
+<a href="https://github.com/ConEmu/ConEmu.github.io">помогая с документацией</a>,
+<a href="https://github.com/Maximus5/ConEmu">пул-реквестами</a>,
+а также рассказывая о ConEmu в соц.сетях. </p>
 
 
-<h2 id="funding"> Make a donation with </h2>
+<h2 id="funding"> Поддержать материально </h2>
 <ul>
   <li><a href="#paypal">PayPal</a></li>
 	<li><a href="#yandex">Yandex.Money</a></li>
@@ -30,27 +30,26 @@ or anything else, spreading the word for example. </p>
 
 <h3 id="paypal"> PayPal </h3>
 <div class="text"><a href="https://paypal.me/conemu/5" target="_blank">PayPal.me/conemu</a></div>
-<div class="text stext">Donate with PayPal</div>
+<div class="text stext">Перевести на PayPal</div>
 
 <h3 id="yandex"> Yandex.Money </h3>
-<div class="text">Yandex.Money wallet: <a href="https://money.yandex.ru/to/410011983971991" target="_blank">4100 1198 3971 991</a></div>
-<div class="text stext">This works only for Russia, Azerbaijan, Armenia, Belarus,
-Kazakhstan, Kyrgyzstan, Tajikistan, Turkmenistan, Uzbekistan, Ukraine.</div>
+<div class="text">Перевести на Яндекс.Деньги: <a href="https://money.yandex.ru/to/410011983971991" target="_blank">4100 1198 3971 991</a></div>
+<div class="text stext">Работает для России и некоторых стран бывшего СНГ.</div>
 
 <h3 id="amazon"> Amazon gift cards </h3>
 <div class="text"><a href="https://www.amazon.de/dp/B07Q1JNC7R/" target="_blank">Amazon's gift cards</a></div>
-<div class="text stext">Just choose your amount and type e-mail in the gift card details:<br/>
+<div class="text stext">Выберите сумму и введите e-mail:<br/>
 <code>ConEmu.Maximus5@gmail.com</code></div>
 
 <h3 id="bitcoin"> Bitcoin (BTC) </h3>
 <div class="text">BTC: <a href="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4?message=Support%20ConEmu%20development">1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4</a></div>
-<div class="text stext">Bitcoin (<a href="https://bitcoin.org/en/faq" target="_blank">FAQ</a>) is digital currency based on open-source software</div>
+<div class="text stext">Bitcoin (<a href="https://bitcoin.org/en/faq" target="_blank">FAQ</a>) криптовалюта основанная на открытом программном обеспечении</div>
 
 <h3 id="flattr"> Flattr </h3>
-<div class="text"><a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" target="_blank">Flattr ConEmu with microdonation</a></div>
-<div class="text stext">What is <a href="https://flattr.com/" target="_blank">Flattr</a> and how it works is described
-<a href="https://github.com/Maximus5/conemu-old-issues/issues/1807#issuecomment-126684603" target="_blank">here</a></div>
+<div class="text"><a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" target="_blank">Микропожертвования через Flattr</a></div>
+<div class="text stext">What is <a href="https://flattr.com/" target="_blank">Flattr</a> и как он работает рассказано
+<a href="https://github.com/Maximus5/conemu-old-issues/issues/1807#issuecomment-126684603" target="_blank">здесь</a></div>
 
 <h3 id="webmoney"> WebMoney </h3>
-<div class="text">Wallets: <code>Z190363130005</code>, <code>E294160643493</code>, <code>R407008788841</code></div>
+<div class="text">Перевести на WebMoney: <code>Z190363130005</code>, <code>E294160643493</code>, <code>R407008788841</code></div>
 <div class="text stext"><a href="http://www.wmtransfer.com/" target="_blank">WebMoney transfer</a></div>
