--- a/_includes/donate_ru.html
+++ b/_includes/donate_ru.html
@@ -1,4 +1,4 @@
-<h1 id="h0">Support ConEmu development</h1>
+<h1 id="h0"> Поддержать ConEmu </h1>
 
 <p>ConEmu-Maximus5 поддерживается усилиями практически одного разработчика.
 На разработку и поддержку потрачены сотни часов, самый ценный ресурс.
@@ -15,7 +15,7 @@
 <a href="#funding">материально (ссылка ниже)</a>,
 <a href="https://github.com/ConEmu/ConEmu.github.io">помогая с документацией</a>,
 <a href="https://github.com/Maximus5/ConEmu">пул-реквестами</a>,
-а также рассказывая о ConEmu в соц.сетях. </p>
+и рассказывая о ConEmu в соц.сетях. </p>
 
 
 <h2 id="funding"> Поддержать материально </h2>
@@ -43,7 +43,7 @@
 
 <h3 id="bitcoin"> Bitcoin (BTC) </h3>
 <div class="text">BTC: <a href="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4?message=Support%20ConEmu%20development">1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4</a></div>
-<div class="text stext">Bitcoin (<a href="https://bitcoin.org/en/faq" target="_blank">FAQ</a>) криптовалюта основанная на открытом программном обеспечении</div>
+<div class="text stext">Bitcoin (<a href="https://bitcoin.org/en/faq" target="_blank">FAQ</a>) криптовалюта с открытым программным обеспечением</div>
 
 <h3 id="flattr"> Flattr </h3>
 <div class="text"><a href="http://flattr.com/thing/2002773/Maximus5ConEmu-on-GitHub" target="_blank">Микропожертвования через Flattr</a></div>
