--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,32 @@
 {% comment %} ‘UTF-8’ {% endcomment %}
 <div class="header">
 <header>
-  <div class="header-left">
+  <div class="header-left" width="100%">
     <div class="h-logo"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/"><img src="/img/logo.png" alt="ConEmu-Maximus5 logo"></a></div>
     <div class="h-title-desc">
       <div class="h-title"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/">ConEmu</a></div>
       <div class="h-desc">{% if site.url != 'local' %}<a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/">{{ page.site_label }}</a>{% else %}<span id="media-width"></span><span id="media-orient"></span>{% endif %}</div>
     </div>
     <div class="h-social">
+      <a class="h-github" target="_blank"
+        href="https://github.com/Maximus5/ConEmu"
+        title="Star and Fork on GitHub"></a>
+      <a class="h-linked" target="_blank"
+        href="https://www.linkedin.com/in/maksimmoisiuk/"
+        title="Connect on LinkedIn"></a>
       <a class="h-twitter" target="_blank"
         href="https://twitter.com/intent/tweet?text={{ site.twit_text }}&url=http%3A%2F%2F{{ site.site_name }}"
         title="Share ConEmu on Twitter"></a>
       <a class="h-facebook" target="_blank"
         href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2F{{ site.site_name }}"
         title="Share ConEmu on FaceBook"></a>
-      <a class="h-github" target="_blank"
-        href="https://github.com/Maximus5/ConEmu"
-        title="Star and Fork on GitHub"></a>
     </div>
   </div>
+  {% comment %}
   <div id="header-google">
 {% if site.url != 'local' %}{% include googleads.html %}{% endif %}
   </div>
+  {% endcomment %}
   <div id="header-line"></div>
 </header>
 </div>
