--- a/_includes/googleads.html
+++ b/_includes/googleads.html
@@ -1,10 +1,1 @@
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    <!-- conemu.github.io-responsive -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-8810818700876198"
-         data-ad-slot="6677483266"
-         data-ad-format="auto"></ins>
-    <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+<script data-ad-client="ca-pub-8810818700876198" async src="://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
