--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -60,6 +60,7 @@ This page was saved from: {{site.url}}{{page.url}}
 <script src="/misc/anchor.min.js"></script>
 
 {% if site.url != 'local' %}{% include analytics.html %}{% endif %}
+{% if site.url != 'local' %}{% include googleads.html %}{% endif %}
 
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
