--- a/_includes/googleads.html
+++ b/_includes/googleads.html
@@ -1,1 +1,1 @@
-<script data-ad-client="ca-pub-8810818700876198" async src="://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script data-ad-client="ca-pub-8810818700876198" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
