--- a/_includes/blog_navigation.html
+++ b/_includes/blog_navigation.html
@@ -17,3 +17,5 @@ The oldest build
 <div class="build_download">
 <a href="{{ site.fosshub }}" rel="nofollow"><img src="/img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a>
 </div>
+
+{% if site.url != 'local' %}{% include googleads.html %}{% endif %}
