--- a/_includes/otherlang.html
+++ b/_includes/otherlang.html
@@ -1,9 +1,6 @@
-			<div class="block">
-				<div class="blocktitle">{% if page.pagelang == 'ru' %}Смена языка{% else %}Switch language{% endif %}</div>
-				<div class="blockcontent">
-					<ul>
-					<li><a  href="{{ page.otherlang.en }}"><span>English</span></a></li>
-					<li><a  href="{{ page.otherlang.ru }}"><span>Russian</span></a></li>
-					</ul>
-				</div>
-			</div>
+<div class="h-lang">
+	<ul>
+	<li><a  href="{{ page.otherlang.en }}"><span>Eng</span></a></li>
+	<li><a  href="{{ page.otherlang.ru }}"><span>Rus</span></a></li>
+	</ul>
+</div>
