Add GitHub sponsors link

--- a/_includes/donate_en.html
+++ b/_includes/donate_en.html
@@ -21,16 +21,21 @@ or anything else, spreading the word for example. </p>
 <h2 id="funding"> Make a donation with </h2>
 <ul>
   <li><a href="#paypal">PayPal</a></li>
-	<li><a href="#yandex">Yandex.Money</a></li>
-	<li><a href="#amazon">Amazon gift cards</a></li>
-	<li><a href="#bitcoin">Bitcoin (BTC)</a></li>
-	<li><a href="#flattr">Flattr</a></li>
-	<li><a href="#webmoney">WebMoney</a></li>
+  <li><a href="#github">GitHub sponsors</a></li>
+  <li><a href="#yandex">Yandex.Money</a></li>
+  <li><a href="#amazon">Amazon gift cards</a></li>
+  <li><a href="#bitcoin">Bitcoin (BTC)</a></li>
+  <li><a href="#flattr">Flattr</a></li>
+  <li><a href="#webmoney">WebMoney</a></li>
 </ul>
 
 <h3 id="paypal"> PayPal </h3>
 <div class="text"><a href="https://paypal.me/conemu/5" target="_blank">PayPal.me/conemu</a></div>
 <div class="text stext">Donate with PayPal</div>
+
+<h3 id="github"> GitHub sponsors </h3>
+<div class="text"><a href="https://github.com/sponsors/Maximus5" target="_blank">Become a sponsor on GitHub</a></div>
+<div class="text stext">GitHub platform allows to set up recurring donations.</div>
 
 <h3 id="yandex"> Yandex.Money </h3>
 <div class="text">Yandex.Money wallet: <a href="https://money.yandex.ru/to/410011983971991" target="_blank">4100 1198 3971 991</a></div>
@@ -51,6 +56,8 @@ Kazakhstan, Kyrgyzstan, Tajikistan, Turkmenistan, Uzbekistan, Ukraine.</div>
 <div class="text stext">What is <a href="https://flattr.com/" target="_blank">Flattr</a> and how it works is described
 <a href="https://github.com/Maximus5/conemu-old-issues/issues/1807#issuecomment-126684603" target="_blank">here</a></div>
 
+<!--
 <h3 id="webmoney"> WebMoney </h3>
 <div class="text">Wallets: <code>Z190363130005</code>, <code>E294160643493</code>, <code>R407008788841</code></div>
 <div class="text stext"><a href="http://www.wmtransfer.com/" target="_blank">WebMoney transfer</a></div>
+-->
