--- a/_includes/donate_ru.html
+++ b/_includes/donate_ru.html
@@ -21,16 +21,21 @@
 <h2 id="funding"> Поддержать материально </h2>
 <ul>
   <li><a href="#paypal">PayPal</a></li>
-	<li><a href="#yandex">Yandex.Money</a></li>
-	<li><a href="#amazon">Amazon gift cards</a></li>
-	<li><a href="#bitcoin">Bitcoin (BTC)</a></li>
-	<li><a href="#flattr">Flattr</a></li>
-	<li><a href="#webmoney">WebMoney</a></li>
+  <li><a href="#github">GitHub sponsors</a></li>
+  <li><a href="#yandex">Yandex.Money</a></li>
+  <li><a href="#amazon">Amazon gift cards</a></li>
+  <li><a href="#bitcoin">Bitcoin (BTC)</a></li>
+  <li><a href="#flattr">Flattr</a></li>
+  <li><a href="#webmoney">WebMoney</a></li>
 </ul>
 
 <h3 id="paypal"> PayPal </h3>
 <div class="text"><a href="https://paypal.me/conemu/5" target="_blank">PayPal.me/conemu</a></div>
 <div class="text stext">Перевести на PayPal</div>
+
+<h3 id="github"> GitHub sponsors </h3>
+<div class="text"><a href="https://github.com/sponsors/Maximus5" target="_blank">Стать спонсором на GitHub</a></div>
+<div class="text stext">На платформе GitHub можно настроить повторяющиеся пожертвования.</div>
 
 <h3 id="yandex"> Yandex.Money </h3>
 <div class="text">Перевести на Яндекс.Деньги: <a href="https://money.yandex.ru/to/410011983971991" target="_blank">4100 1198 3971 991</a></div>
@@ -50,6 +55,8 @@
 <div class="text stext">What is <a href="https://flattr.com/" target="_blank">Flattr</a> и как он работает рассказано
 <a href="https://github.com/Maximus5/conemu-old-issues/issues/1807#issuecomment-126684603" target="_blank">здесь</a></div>
 
+<!--
 <h3 id="webmoney"> WebMoney </h3>
 <div class="text">Перевести на WebMoney: <code>Z190363130005</code>, <code>E294160643493</code>, <code>R407008788841</code></div>
 <div class="text stext"><a href="http://www.wmtransfer.com/" target="_blank">WebMoney transfer</a></div>
+-->
