--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,6 +1,6 @@
 			<div class="h-search">
 					<form method="GET" action="{{ site.url }}/search.html">
-						<div id="search-field-div"><input id="search-field" type="text" name="q" value="" placeholder="{% if page.pagelang != 'ru' %}Site search{% else %}Поиск по сайту{% endif %}"></div>
+						<div id="search-field-div"><input id="search-field" type="text" name="q" value="" placeholder="{% if page.pagelang != 'ru' %}site search{% else %}поиск по сайту{% endif %}"></div>
 					</form>
 				<script>
 				{
