--- a/_includes/blog_navigation.html
+++ b/_includes/blog_navigation.html
@@ -16,6 +16,8 @@ The oldest build
 
 <div class="build_download">
 <a href="{{ site.fosshub }}" rel="nofollow"><img src="/img/Downloads.png" alt="Fosshub.com" title="Fosshub.com mirror"></img></a>
+<span>&nbsp;&nbsp;</span>
+<a href="/donate.html"><img src="/img/Donate.png" alt="Donate" title="Support development by donation"></img></a>
 </div>
 
 {% if site.url != 'local' %}{% include googleads.html %}{% endif %}
