Donate page redesign

--- a/_includes/donate_ru.html
+++ b/_includes/donate_ru.html
@@ -19,15 +19,35 @@
 
 
 <h2 id="funding"> Поддержать материально </h2>
-<ul>
-  <li><a href="#paypal">PayPal</a></li>
-  <li><a href="#github">GitHub sponsors</a></li>
-  <li><a href="#yandex">Yandex.Money</a></li>
-  <li><a href="#amazon">Amazon gift cards</a></li>
-  <li><a href="#bitcoin">Bitcoin (BTC)</a></li>
-  <li><a href="#flattr">Flattr</a></li>
-  <li><a href="#webmoney">WebMoney</a></li>
-</ul>
+
+<table class="d-table">
+<tr>
+<td colspan="2">
+  <a href="https://paypal.me/conemu/5" target="_blank"><img
+     src="../img/donate-paypal.png" alt="PayPal"></a>
+</td>
+<td colspan="2">
+  <a href="https://money.yandex.ru/to/410011983971991" target="_blank"><img
+     src="../img/donate-ymoney-ru.png" alt="Яндекс.Деньги"></a>
+</td>
+</tr>
+<tr>
+<td>
+  <a href="https://github.com/sponsors/Maximus5" target="_blank"><img
+     src="../img/donate-github.png" alt="GitHub sponsors"></a>
+</td>
+<td><a href="https://github.com/sponsors/Maximus5" target="_blank">Стать спонсором на GitHub</a></td>
+<td>
+  <a href="bitcoin:1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4?message=Support%20ConEmu%20development" target="_blank"><img
+     src="../img/donate-bitcoin.png" alt="Bitcoin (BTC)" title="Bitcoin (BTC)"></a>
+</td>
+<td>BTC: 1KiXxByfz53QNMSfrudZf5yTJvMKKY4Cn4</td>
+</tr>
+</table>
+
+
+
+{% comment %}
 
 <h3 id="paypal"> PayPal </h3>
 <div class="text"><a href="https://paypal.me/conemu/5" target="_blank">PayPal.me/conemu</a></div>
@@ -55,8 +75,8 @@
 <div class="text stext">What is <a href="https://flattr.com/" target="_blank">Flattr</a> и как он работает рассказано
 <a href="https://github.com/Maximus5/conemu-old-issues/issues/1807#issuecomment-126684603" target="_blank">здесь</a></div>
 
-<!--
 <h3 id="webmoney"> WebMoney </h3>
 <div class="text">Перевести на WebMoney: <code>Z190363130005</code>, <code>E294160643493</code>, <code>R407008788841</code></div>
 <div class="text stext"><a href="http://www.wmtransfer.com/" target="_blank">WebMoney transfer</a></div>
--->
+
+{% endcomment %}
