--- a/main.css
+++ b/main.css
@@ -227,41 +227,6 @@ h1 {
   text-align: center;
 }
 
-.donatebox {
-  width: 20em;
-  max-width: 90%;
-  background-color: #fdf6e3;
-  -webkit-box-shadow: 0 0 8px 3px #93a1a1;
-  -moz-box-shadow: 0 0 8px 3px #93a1a1;
-  box-shadow: 0 0 8px 3px #93a1a1;
-  padding: .5em;
-  margin: 1em 0 1em 5px;
-  overflow: auto;
-}
-
-div.donate-Ylabel {
-  width: 12em;
-  margin-bottom: .2em;
-}
-
-div.donate-Yfield {
-  width: 18em;
-}
-
-div.donate-Yfield input {
-  margin-bottom: .5em;
-  width: 18em;
-}
-
-div.donate-Yradio1, div.donate-Yradio2 {
-  width: 12em;
-  margin-right: .2em;
-}
-
-div.donate-Ybutton {
-  margin: .5em 0 .2em 0;
-}
-
 table, tr, th, td {
   border-collapse: collapse;
   border: 1px solid black;
@@ -281,6 +246,35 @@ table.no-border tr, table.no-border th, table.no-border td {
   border: 0;
   border-spacing: 0;
   padding: 0;
+}
+
+table.d-table {
+  border: 0;
+  border-spacing: 0;
+  width: 100%;
+}
+
+table.d-table tr, table.d-table td {
+  border: 0;
+  border-spacing: 0;
+}
+
+table.d-table td {
+  padding: 10px 0 5px 0;
+  font-size: 80%;
+}
+
+table.d-table a {
+  text-decoration: none;
+  color: #002b36;
+}
+table.d-table a:hover {
+  text-decoration: none;
+  color: #002b36;
+}
+table.d-table a:visited {
+  text-decoration: none;
+  color: #002b36;
 }
 
 .footer {
